--- a/.editorconfig
+++ b/.editorconfig
@@ -11,10 +11,10 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.{js,html,css,styl}]
-indent_style = tab
-indent_size = 4
+indent_style = space
+indent_size = 2
 
 [*.{md,json}]
 indent_style = space
-indent_size = 4
+indent_size = 2
 trim_trailing_whitespace = false
