--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,13 +2,13 @@
 	"root": true,
 	"env": {
 		"node": true,
-    "browser": true
+		"browser": true,
+		"es6": true
 	},
 	"globals": {
     "Promise": true
 	},
 	"rules": {
-		"strict": ["error", "global"],
 		"init-declarations": "off",
 		"no-catch-shadow": "off",
 		"no-delete-var": "warn",
@@ -89,7 +89,6 @@
 		"no-implied-eval": "error",
 		"no-invalid-this": "off",
 		"no-iterator": "error",
-		"no-labels": "error",
 		"no-lone-blocks": "error",
 		"no-loop-func": "error",
 		"no-multi-spaces": ["error", {
@@ -151,7 +150,6 @@
 		"func-style": "off",
 		"id-length": "off",
 		"id-match": "off",
-		"indent": ["warn", "tab"],
 		"jsx-quotes": ["warn", "prefer-double"],
 		"key-spacing": ["warn", {
 			"beforeColon": false,
@@ -206,17 +204,13 @@
 			"before": false,
 			"after": true
 		}],
-		"semi": ["warn", "always"],
+		"semi": "off",
 		"sort-vars": "off",
 		"keyword-spacing": ["warn", {
 			"before": true,
 			"after": true
 		}],
 		"space-before-blocks": ["warn", "always"],
-		"space-before-function-paren": ["warn", {
-			"anonymous": "always",
-			"named": "never"
-		}],
 		"space-in-parens": ["warn", "never"],
 		"space-infix-ops": ["warn", {
 			"int32Hint": false
