--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,8 +22,9 @@ jobs:
         NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
     - name: safely run post-install scripts
       run: npm rebuild && npm run prepare --if-present
-    - name: build
-      run: yarn build
+    # might be useful in the future
+    # - name: build
+    #   run: yarn build
     - name: publish
       run: npm publish
       env:
