--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rentpath/react-simple-dfp",
-  "version": "1.3.0",
+  "version": "2.0.0-beta",
   "description": "A simple React component for DFP - DoubleClick for Publishers based on @amobiz/react-simple-dfp.",
   "main": "lib/component.js",
   "scripts": {
