--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -7,6 +7,6 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: 'ubuntu-latest'
     steps:
-    - name: trigger build
-      run: |
-        curl -v -X POST -H "Accept: application/vnd.github.everest-preview+json" -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" https://api.github.com/repos/${{ github.repository }}/dispatches -d '{"event_type":"semantic-release","client_payload":{"ref":"${{ github.ref }}","sha":"${{ github.sha }}"}}'
+      - name: trigger build
+        run: |
+          curl -v -X POST -H "Accept: application/vnd.github.everest-preview+json" -H "Authorization: Bearer ${{ secrets.GH_REPO_DISPATCH_RENTPATH_BOT }}" https://api.github.com/repos/${{ github.repository }}/dispatches -d '{"event_type":"semantic-release","client_payload":{"ref":"${{ github.ref }}","sha":"${{ github.sha }}"}}'
