--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,25 +6,25 @@ jobs:
   publish:
     runs-on: 'ubuntu-latest'
     steps:
-    - uses: actions/checkout@v2
-      with:
-        ref: ${{ github.event.client_payload.ref }}
-    - uses: actions/setup-node@v1
-      with:
-        node-version: '12.x'
-        registry-url: 'https://npm.pkg.github.com/'
-        scope: '@rentpath'
-    - name: install dependencies
-      run: |
-        yarn config set @rentpath:registry https://npm.pkg.github.com
-        yarn install --ignore-scripts
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
-    - name: safely run post-install scripts
-      run: npm rebuild && npm run prepare --if-present
-    - name: build
-      run: yarn build
-    - name: publish
-      run: npm publish
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.client_payload.ref }}
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+          registry-url: 'https://npm.pkg.github.com/'
+          scope: '@rentpath'
+      - name: install dependencies
+        run: |
+          yarn config set @rentpath:registry https://npm.pkg.github.com
+          yarn install --ignore-scripts
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GH_GPR_TOKEN }}
+      - name: safely run post-install scripts
+        run: npm rebuild && npm run prepare --if-present
+      - name: build
+        run: yarn build
+      - name: publish
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GH_GPR_TOKEN }}
