--- a/package.json
+++ b/package.json
@@ -33,5 +33,6 @@
   },
   "peerDependencies": {
     "react": ">= 15.3.0"
-  }
+  },
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" }
 }
