--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,17 +14,21 @@ jobs:
           node-version: '12.x'
           registry-url: 'https://npm.pkg.github.com/'
           scope: '@rentpath'
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GH_RENTPATH_PLATENG_GPR_PUSH_TOKEN }}
       - name: install dependencies
         run: |
           yarn config set @rentpath:registry https://npm.pkg.github.com
           yarn install --ignore-scripts
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GH_GPR_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GH_RENTPATH_PLATENG_GPR_PUSH_TOKEN }}
       - name: safely run post-install scripts
         run: npm rebuild && npm run prepare --if-present
       # no script in package.json named "build"
       # - name: build
       #   run: yarn build
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GH_RENTPATH_PLATENG_GPR_PUSH_TOKEN }}
       - name: publish
         run: |
           npm config set loglevel verbose --global
