--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
         yarn config set @rentpath:registry https://npm.pkg.github.com
         yarn install --ignore-scripts
       env:
-        NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
+        NODE_AUTH_TOKEN: ${{ secrets.GH_GPR_TOKEN }}
     - name: safely run post-install scripts
       run: npm rebuild && npm run prepare --if-present
     # might be useful in the future
@@ -28,4 +28,4 @@ jobs:
     - name: publish
       run: npm publish
       env:
-        NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
+        NODE_AUTH_TOKEN: ${{ secrets.GH_GPR_TOKEN }}
