--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -9,8 +9,8 @@ jobs:
     steps:
       - name: trigger build
         run: |
-          curl -X POST \
-               -H "Accept: application/vnd.github.everest-preview+json" \
-               -H "Authorization: Bearer ${{ secrets.GH_REPO_DISPATCH_RENTPATH_BOT }}" \
-               "https://api.github.com/repos/${{ github.repository }}/dispatches" \
-               -d '{"event_type":"semantic-release","client_payload":{"ref":"${{ github.ref }}","sha":"${{ github.sha }}"}}'
+          curl --request POST \
+               --header "Accept: application/vnd.github.everest-preview+json" \
+               --header "Authorization: Bearer ${{ secrets.GH_REPO_DISPATCH_RENTPATH_BOT }}" \
+               --url "https://api.github.com/repos/${{ github.repository }}/dispatches" \
+               --data-binary '{"event_type":"semantic-release","client_payload":{"ref":"${{ github.ref }}","sha":"${{ github.sha }}"}}'
