--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,13 +2,27 @@ name: Publish Package
 on:
   repository_dispatch:
     types: [semantic-release]
+  workflow_dispatch:
+    inputs:
+      ref:
+        description: The ref of the commit to build.
+        required: true
 jobs:
   publish:
     runs-on: 'ubuntu-latest'
     steps:
-      - uses: actions/checkout@v2
+      - name: get rossum app token
+        id: rossum
+        uses: getsentry/action-github-app-token@v1
         with:
-          ref: ${{ github.event.client_payload.ref }}
+          app_id: ${{ secrets.ROSSUM_APP_ID }}
+          private_key: ${{ secrets.ROSSUM_PRIVATE_KEY }}
+
+      - name: check out most recent commit
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.inputs.ref || github.event.client_payload.ref }}
+          token: ${{ steps.rossum.outputs.token }}
 
       - uses: actions/setup-node@v2
         with:
@@ -21,7 +35,7 @@ jobs:
           yarn config set @rentpath:registry https://npm.pkg.github.com
           yarn install --ignore-scripts
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GH_GPR_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ steps.rossum.outputs.token }}
 
       - name: safely run post-install scripts
         run: npm rebuild && npm run prepare --if-present
@@ -33,4 +47,4 @@ jobs:
       - name: publish
         run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GPR_PUBLIC_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ steps.rossum.outputs.token }}
