feat: use rossum app token to trigger build
[DX-1135](https://rentpath.atlassian.net/browse/DX-1135)

--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -8,23 +8,23 @@ jobs:
     if: ${{ github.event.pull_request.merged == true || github.event_name == 'workflow_dispatch' }}
     runs-on: 'ubuntu-latest'
     steps:
-      # - name: get rossum app token
-      #   id: rossum
-      #   uses: getsentry/action-github-app-token@v1
-      #   with:
-      #     app_id: ${{ secrets.APP_ID }}
-      #     private_key: ${{ secrets.ROSSUM_PRIVATE_KEY }}
+      - name: get rossum app token
+        id: rossum
+        uses: getsentry/action-github-app-token@v1
+        with:
+          app_id: ${{ secrets.ROSSUM_APP_ID }}
+          private_key: ${{ secrets.ROSSUM_PRIVATE_KEY }}
 
       - name: Check out repo
         uses: actions/checkout@v2
         with:
           ref: ${{ github.ref }}
-          # token: ${{ steps.rossum.outputs.token }}
+          token: ${{ steps.rossum.outputs.token }}
 
       - name: trigger build
         run: |
           curl --request POST \
                --header "Accept: application/vnd.github.everest-preview+json" \
-               --header "Authorization: Bearer ${{ secrets.GH_REPO_DISPATCH_RENTPATH_BOT }}" \
+               --header "Authorization: Bearer ${{ steps.rossum.outputs.token }}" \
                --url "https://api.github.com/repos/${{ github.repository }}/dispatches" \
                --data-binary '{"event_type":"semantic-release","client_payload":{"ref":"${{ github.ref }}","sha":"${{ github.sha }}"}}'
