fix: publish using provided token
[DX-1135](https://rentpath.atlassian.net/browse/DX-1135)

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,4 +47,4 @@ jobs:
       - name: publish
         run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ steps.rossum.outputs.token }}
+          NODE_AUTH_TOKEN: ${{ github.token }}
