fix: update npm configuration for publishing
[DX-1135](https://rentpath.atlassian.net/browse/DX-1135)

- add “npm publish” config to package.json
  - it will be removed from the workflow once we know it’s working here
- use GHA-supplied token in publish workflow

--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
   "peerDependencies": {
     "react": ">= 15.3.0"
   },
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" }
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com/",
+    "scope": "@rentpath"
+  }
 }
