--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,18 +11,18 @@ jobs:
   publish:
     runs-on: 'ubuntu-latest'
     steps:
-      - name: get rossum app token
-        id: rossum
-        uses: getsentry/action-github-app-token@v1
-        with:
-          app_id: ${{ secrets.ROSSUM_APP_ID }}
-          private_key: ${{ secrets.ROSSUM_PRIVATE_KEY }}
+      # - name: get rossum app token
+      #   id: rossum
+      #   uses: getsentry/action-github-app-token@v1
+      #   with:
+      #     app_id: ${{ secrets.ROSSUM_APP_ID }}
+      #     private_key: ${{ secrets.ROSSUM_PRIVATE_KEY }}
 
       - name: check out most recent commit
         uses: actions/checkout@v2
         with:
           ref: ${{ github.event.inputs.ref || github.event.client_payload.ref }}
-          token: ${{ steps.rossum.outputs.token }}
+          token: ${{ github.token }}
 
       - uses: actions/setup-node@v2
         with:
@@ -35,7 +35,7 @@ jobs:
           yarn config set @rentpath:registry https://npm.pkg.github.com
           yarn install --ignore-scripts
         env:
-          NODE_AUTH_TOKEN: ${{ steps.rossum.outputs.token }}
+          NODE_AUTH_TOKEN: ${{ github.token }}
 
       - name: safely run post-install scripts
         run: npm rebuild && npm run prepare --if-present
@@ -45,6 +45,6 @@ jobs:
       #   run: yarn build
 
       - name: publish
-        run: npm publish
+        run: npm publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{ github.token }}
