--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,12 +21,15 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 12.x
+          registry-url: https://registry.npmjs.org
+          scope: '@rentpath'
 
       - name: install dependencies
         run: |
+          yarn config set @rentpath:registry https://registry.npmjs.org
           yarn install --ignore-scripts
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPMJS_CUBBY_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ github.token }}
 
       - name: safely run post-install scripts
         run: npm rebuild && npm run prepare --if-present
@@ -36,6 +39,6 @@ jobs:
       #   run: yarn build
 
       - name: publish
-        run: npm publish
+        run: npm publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPMJS_CUBBY_TOKEN }}
