--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org",
+    "registry": "https://npm.pkg.github.com/",
     "scope": "@rentpath"
   }
 }
